--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^12.4.1",
+    "lucide-react": "^0.475.0",
     "next": "15.1.4",
     "next-intl": "^3.26.3",
     "react": "^19.0.0",
