--- a/package.json
+++ b/package.json
@@ -9,18 +9,33 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^4.1.2",
+    "@prisma/client": "^6.16.2",
+    "@tiptap/extension-image": "^3.5.0",
+    "@tiptap/extension-link": "^3.5.0",
+    "@tiptap/react": "^3.5.0",
+    "@tiptap/starter-kit": "^3.5.0",
     "@upstash/ratelimit": "^2.0.5",
     "@upstash/redis": "^1.34.4",
-    "framer-motion": "^12.4.1",
+    "aos": "^2.3.4",
+    "argon2": "^0.44.0",
+    "bcrypt": "^6.0.0",
+    "date-fns": "^4.1.0",
+    "framer-motion": "^12.23.19",
     "lucide-react": "^0.475.0",
     "next": "15.1.4",
+    "next-auth": "^4.24.11",
     "next-intl": "^3.26.3",
     "nodemailer": "^6.10.0",
+    "prisma": "^6.16.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-photo-view": "^1.2.7",
     "react-toastify": "^11.0.5",
+    "react-vertical-timeline-component": "^3.5.3",
+    "sanitize-html": "^2.17.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
