--- a/package.json
+++ b/package.json
@@ -8,33 +8,63 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "prisma": {
+    "seed": "node prisma/seed.js"
+  },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^4.1.2",
+    "@monaco-editor/react": "^4.7.0",
+    "@mui/icons-material": "^7.3.2",
+    "@mui/material": "^7.3.2",
     "@prisma/client": "^6.16.2",
-    "@tiptap/extension-image": "^3.5.0",
-    "@tiptap/extension-link": "^3.5.0",
-    "@tiptap/react": "^3.5.0",
-    "@tiptap/starter-kit": "^3.5.0",
+    "@tiptap/extension-character-count": "^3.5.1",
+    "@tiptap/extension-code-block-lowlight": "^3.5.1",
+    "@tiptap/extension-color": "^3.5.2",
+    "@tiptap/extension-focus": "^3.5.1",
+    "@tiptap/extension-highlight": "^3.5.1",
+    "@tiptap/extension-image": "^3.5.2",
+    "@tiptap/extension-link": "^3.5.2",
+    "@tiptap/extension-subscript": "^3.5.1",
+    "@tiptap/extension-superscript": "^3.5.1",
+    "@tiptap/extension-text-align": "^3.5.1",
+    "@tiptap/extension-text-style": "^3.5.2",
+    "@tiptap/extension-typography": "^3.5.1",
+    "@tiptap/pm": "^3.5.2",
+    "@tiptap/react": "^3.5.2",
+    "@tiptap/starter-kit": "^3.5.2",
+    "@types/bcryptjs": "^3.0.0",
+    "@types/dompurify": "^3.2.0",
+    "@types/jsdom": "^21.1.7",
     "@upstash/ratelimit": "^2.0.5",
     "@upstash/redis": "^1.34.4",
     "aos": "^2.3.4",
     "argon2": "^0.44.0",
     "bcrypt": "^6.0.0",
     "date-fns": "^4.1.0",
+    "dompurify": "^3.2.7",
     "framer-motion": "^12.23.19",
+    "isomorphic-dompurify": "^2.28.0",
+    "jsdom": "^27.0.0",
+    "lowlight": "^3.3.0",
     "lucide-react": "^0.475.0",
     "next": "15.1.4",
     "next-auth": "^4.24.11",
     "next-intl": "^3.26.3",
+    "next-sitemap": "^4.2.3",
     "nodemailer": "^6.10.0",
     "prisma": "^6.16.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-markdown": "^10.1.0",
     "react-photo-view": "^1.2.7",
     "react-toastify": "^11.0.5",
     "react-vertical-timeline-component": "^3.5.3",
+    "rehype-raw": "^7.0.0",
+    "remark-gfm": "^4.0.1",
     "sanitize-html": "^2.17.0",
     "zod": "^3.24.2"
   },
@@ -43,10 +73,12 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-vertical-timeline-component": "^3.3.6",
     "eslint": "^9",
     "eslint-config-next": "15.1.4",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   }
 }
