--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "seed": "node prisma/seed.js"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@google-analytics/data": "^5.2.0",
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^4.1.2",
     "@monaco-editor/react": "^4.7.0",
@@ -22,19 +26,25 @@
     "@prisma/client": "^6.16.2",
     "@tiptap/extension-character-count": "^3.5.1",
     "@tiptap/extension-code-block-lowlight": "^3.5.1",
-    "@tiptap/extension-color": "^3.5.2",
+    "@tiptap/extension-color": "^3.6.1",
     "@tiptap/extension-focus": "^3.5.1",
-    "@tiptap/extension-highlight": "^3.5.1",
-    "@tiptap/extension-image": "^3.5.2",
-    "@tiptap/extension-link": "^3.5.2",
+    "@tiptap/extension-highlight": "^3.6.1",
+    "@tiptap/extension-image": "^3.6.1",
+    "@tiptap/extension-link": "^3.6.1",
+    "@tiptap/extension-placeholder": "^3.6.1",
     "@tiptap/extension-subscript": "^3.5.1",
     "@tiptap/extension-superscript": "^3.5.1",
-    "@tiptap/extension-text-align": "^3.5.1",
-    "@tiptap/extension-text-style": "^3.5.2",
-    "@tiptap/extension-typography": "^3.5.1",
-    "@tiptap/pm": "^3.5.2",
-    "@tiptap/react": "^3.5.2",
-    "@tiptap/starter-kit": "^3.5.2",
+    "@tiptap/extension-table": "^3.6.1",
+    "@tiptap/extension-table-cell": "^3.6.1",
+    "@tiptap/extension-table-header": "^3.6.1",
+    "@tiptap/extension-table-row": "^3.6.1",
+    "@tiptap/extension-text-align": "^3.6.1",
+    "@tiptap/extension-text-style": "^3.6.1",
+    "@tiptap/extension-typography": "^3.6.1",
+    "@tiptap/extension-underline": "^3.6.1",
+    "@tiptap/pm": "^3.6.1",
+    "@tiptap/react": "^3.6.1",
+    "@tiptap/starter-kit": "^3.6.1",
     "@types/bcryptjs": "^3.0.0",
     "@types/dompurify": "^3.2.0",
     "@types/jsdom": "^21.1.7",
@@ -46,6 +56,7 @@
     "date-fns": "^4.1.0",
     "dompurify": "^3.2.7",
     "framer-motion": "^12.23.19",
+    "googleapis": "^160.0.0",
     "isomorphic-dompurify": "^2.28.0",
     "jsdom": "^27.0.0",
     "lowlight": "^3.3.0",
@@ -57,6 +68,8 @@
     "nodemailer": "^6.10.0",
     "prisma": "^6.16.2",
     "react": "^19.0.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-markdown": "^10.1.0",
@@ -66,7 +79,8 @@
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.1",
     "sanitize-html": "^2.17.0",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
