--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,25 @@
 
 # production
 /build
-/public/uploads/references
+
+# misc
+.DS_Store
+*.pem
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# local env files
+.env*.local
+
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
 
 # IDE
 .vscode/
@@ -28,7 +46,6 @@
 *.ntvs*
 *.njsproj
 *.sln
-*.sw?
 
 # OS
 Thumbs.db
@@ -38,13 +55,9 @@ $RECYCLE.BIN/
 # Logs
 logs
 *.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
 
 # Build output
 /dist
-/build
 
 # Sensitive files
 .env*
@@ -61,7 +74,6 @@ yarn-error.log*
 *.tgz
 *.zip
 *.7z
-*.bak
 *.tmp
 
 # Next.js static export
@@ -96,3 +108,6 @@ next-env.d.ts
 
 # Admin setup/readme
 README-ADMIN-SETUP.md
+
+# Uploads (keep structure but ignore files)
+/public/uploads/*
