--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "next": "15.1.4",
     "next-auth": "^4.24.11",
     "next-intl": "^3.26.3",
-    "next-sitemap": "^4.2.3",
+    "next-seo": "^6.8.0",
     "nodemailer": "^6.10.0",
     "prisma": "^6.16.2",
     "react": "^19.0.0",
@@ -79,6 +79,7 @@
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.1",
     "sanitize-html": "^2.17.0",
+    "web-vitals": "^3.5.0",
     "zod": "^3.24.2",
     "zustand": "^5.0.8"
   },
