--- a/package.json
+++ b/package.json
@@ -61,11 +61,11 @@
     "jsdom": "^27.0.0",
     "lowlight": "^3.3.0",
     "lucide-react": "^0.475.0",
-    "next": "15.1.4",
+    "next": "^15.5.9",
     "next-auth": "^4.24.11",
     "next-intl": "^3.26.3",
     "next-seo": "^6.8.0",
-    "nodemailer": "^6.10.0",
+    "nodemailer": "^7.0.7",
     "prisma": "^6.16.2",
     "react": "^19.0.0",
     "react-dnd": "^16.0.1",
