--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@dnd-kit/utilities": "^3.2.2",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@floating-ui/dom": "^1.6.0",
     "@google-analytics/data": "^5.2.0",
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^4.1.2",
@@ -24,27 +25,45 @@
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.2",
     "@prisma/client": "^6.16.2",
+    "@tiptap/extension-bubble-menu": "^3.14.0",
     "@tiptap/extension-character-count": "^3.5.1",
     "@tiptap/extension-code-block-lowlight": "^3.5.1",
+    "@tiptap/extension-collaboration": "^3.14.0",
     "@tiptap/extension-color": "^3.6.1",
+    "@tiptap/extension-drag-handle": "^3.14.0",
+    "@tiptap/extension-drag-handle-react": "^3.14.0",
+    "@tiptap/extension-dropcursor": "^3.14.0",
+    "@tiptap/extension-file-handler": "^3.14.0",
+    "@tiptap/extension-floating-menu": "^3.14.0",
     "@tiptap/extension-focus": "^3.5.1",
+    "@tiptap/extension-font-family": "^3.14.0",
+    "@tiptap/extension-font-size": "^3.0.0-next.3",
+    "@tiptap/extension-gapcursor": "^3.14.0",
     "@tiptap/extension-highlight": "^3.6.1",
     "@tiptap/extension-image": "^3.6.1",
+    "@tiptap/extension-invisible-characters": "^3.14.0",
     "@tiptap/extension-link": "^3.6.1",
+    "@tiptap/extension-list": "^3.14.0",
+    "@tiptap/extension-list-keymap": "^3.14.0",
+    "@tiptap/extension-node-range": "^3.14.0",
     "@tiptap/extension-placeholder": "^3.6.1",
     "@tiptap/extension-subscript": "^3.5.1",
     "@tiptap/extension-superscript": "^3.5.1",
-    "@tiptap/extension-table": "^3.6.1",
+    "@tiptap/extension-table": "^3.14.0",
     "@tiptap/extension-table-cell": "^3.6.1",
     "@tiptap/extension-table-header": "^3.6.1",
+    "@tiptap/extension-table-of-contents": "^3.14.0",
     "@tiptap/extension-table-row": "^3.6.1",
-    "@tiptap/extension-text-align": "^3.6.1",
-    "@tiptap/extension-text-style": "^3.6.1",
-    "@tiptap/extension-typography": "^3.6.1",
+    "@tiptap/extension-text-align": "^3.14.0",
+    "@tiptap/extension-text-style": "^3.14.0",
+    "@tiptap/extension-typography": "^3.14.0",
     "@tiptap/extension-underline": "^3.6.1",
+    "@tiptap/extension-unique-id": "^3.14.0",
+    "@tiptap/extensions": "^3.14.0",
     "@tiptap/pm": "^3.6.1",
     "@tiptap/react": "^3.6.1",
-    "@tiptap/starter-kit": "^3.6.1",
+    "@tiptap/starter-kit": "^3.14.0",
+    "@tiptap/y-tiptap": "^3.0.1",
     "@types/bcryptjs": "^3.0.0",
     "@types/dompurify": "^3.2.0",
     "@types/jsdom": "^21.1.7",
@@ -80,6 +99,8 @@
     "remark-gfm": "^4.0.1",
     "sanitize-html": "^2.17.0",
     "web-vitals": "^3.5.0",
+    "y-protocols": "^1.0.7",
+    "yjs": "^13.6.28",
     "zod": "^3.24.2",
     "zustand": "^5.0.8"
   },
