--- a/package.json
+++ b/package.json
@@ -25,26 +25,33 @@
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.2",
     "@prisma/client": "^6.16.2",
+    "@tiptap/extension-blockquote": "^3.14.0",
     "@tiptap/extension-bubble-menu": "^3.14.0",
     "@tiptap/extension-character-count": "^3.5.1",
+    "@tiptap/extension-code-block": "^3.14.0",
     "@tiptap/extension-code-block-lowlight": "^3.5.1",
     "@tiptap/extension-collaboration": "^3.14.0",
     "@tiptap/extension-color": "^3.6.1",
     "@tiptap/extension-drag-handle": "^3.14.0",
     "@tiptap/extension-drag-handle-react": "^3.14.0",
     "@tiptap/extension-dropcursor": "^3.14.0",
+    "@tiptap/extension-emoji": "^3.14.0",
     "@tiptap/extension-file-handler": "^3.14.0",
     "@tiptap/extension-floating-menu": "^3.14.0",
     "@tiptap/extension-focus": "^3.5.1",
     "@tiptap/extension-font-family": "^3.14.0",
     "@tiptap/extension-font-size": "^3.0.0-next.3",
     "@tiptap/extension-gapcursor": "^3.14.0",
+    "@tiptap/extension-hard-break": "^3.14.0",
+    "@tiptap/extension-heading": "^3.14.0",
     "@tiptap/extension-highlight": "^3.6.1",
+    "@tiptap/extension-horizontal-rule": "^3.14.0",
     "@tiptap/extension-image": "^3.6.1",
     "@tiptap/extension-invisible-characters": "^3.14.0",
     "@tiptap/extension-link": "^3.6.1",
     "@tiptap/extension-list": "^3.14.0",
     "@tiptap/extension-list-keymap": "^3.14.0",
+    "@tiptap/extension-mention": "^3.14.0",
     "@tiptap/extension-node-range": "^3.14.0",
     "@tiptap/extension-placeholder": "^3.6.1",
     "@tiptap/extension-subscript": "^3.5.1",
@@ -54,11 +61,14 @@
     "@tiptap/extension-table-header": "^3.6.1",
     "@tiptap/extension-table-of-contents": "^3.14.0",
     "@tiptap/extension-table-row": "^3.6.1",
+    "@tiptap/extension-task-item": "^3.14.0",
+    "@tiptap/extension-task-list": "^3.14.0",
     "@tiptap/extension-text-align": "^3.14.0",
     "@tiptap/extension-text-style": "^3.14.0",
     "@tiptap/extension-typography": "^3.14.0",
     "@tiptap/extension-underline": "^3.6.1",
     "@tiptap/extension-unique-id": "^3.14.0",
+    "@tiptap/extension-youtube": "^3.14.0",
     "@tiptap/extensions": "^3.14.0",
     "@tiptap/pm": "^3.6.1",
     "@tiptap/react": "^3.6.1",
