--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "@types/bcryptjs": "^3.0.0",
     "@types/dompurify": "^3.2.0",
     "@types/jsdom": "^21.1.7",
+    "@types/qrcode": "^1.5.6",
     "@upstash/ratelimit": "^2.0.5",
     "@upstash/redis": "^1.34.4",
     "aos": "^2.3.4",
@@ -96,7 +97,9 @@
     "next-intl": "^3.26.3",
     "next-seo": "^6.8.0",
     "nodemailer": "^7.0.7",
+    "otplib": "^12.0.1",
     "prisma": "^6.16.2",
+    "qrcode": "^1.5.4",
     "react": "^19.0.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
